Quick fix to fix header disappearing on smaller screen

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 #header {
   width: 100%;
   background-color: #000066;
-  height: 10px;
+  top: 0;
+  padding-bottom: 10px;
 }
 
 #footer {
@@ -55,6 +56,7 @@ body {
   width: 200px;
   height: auto;
   border-radius: 50%;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
